Stop overflow using flex-wrap

--- a/04-Stu_Flexbox-Layout/Unsolved/assets/css/style.css
+++ b/04-Stu_Flexbox-Layout/Unsolved/assets/css/style.css
@@ -9,6 +9,8 @@ body {
 
 main {
   display: flex;
+  /* Added flex-wrap to stop page overflow */
+  flex-wrap: wrap;
   margin-top: 2%;
 }
 
